--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^52.0.23",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~13.0.3",
+    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-navigation-bar": "~4.0.6",
     "expo-router": "~4.0.15",
